# kornia-rs

./: Cargo.toml
.github/: dependabot.yml
.github/actions/setup-rust-cache/: action.yml
.github/workflows/: python_release.yml  python_test.yml  rust_lint.yml  rust_test.yml
crates/kornia-3d/: Cargo.toml
crates/kornia-apriltag/: Cargo.toml
crates/kornia-apriltag/src/: decoder.rs  lib.rs
crates/kornia-apriltag/src/family/: mod.rs
crates/kornia-gpu/: Cargo.toml
crates/kornia-gpu/benches/: Cargo.toml  tensor_ops.rs
crates/kornia-gpu/src/: allocator.rs  device.rs  error.rs  lib.rs  memory.rs  ops.rs  runtime.rs  tests.rs
crates/kornia-gpu/src/kernels/: color.rs  elementwise.rs  mod.rs  reduction.rs  resize.rs
crates/kornia-gpu/tests/: color_tests.rs  debug_color.rs  ops_tests.rs
crates/kornia-image/src/: error.rs
crates/kornia-imgproc/: Cargo.toml
crates/kornia-imgproc/benches/: bench_filters.rs  bench_strategies.rs
crates/kornia-imgproc/src/: pyramid.rs
crates/kornia-imgproc/src/filter/: kernels.rs  ops.rs  separable_filter.rs
crates/kornia-vlm/: Cargo.toml
examples/copper/: Cargo.toml
examples/foxglove/: Cargo.toml
examples/gpu_hello/: Cargo.toml
examples/gpu_hello/src/: main.rs
examples/ros-z-nodes/: Cargo.toml
examples/smol_vlm_convo/: Cargo.toml
kornia-py/: Cargo.toml
kornia-py/src/: apriltag.rs
